[project]
name = "odoo-addons-oca-stock-logistics-availability"
version = "17.0.20250120.0"
dependencies = [
    "odoo-addon-stock_available>=17.0dev,<17.1dev",
    "odoo-addon-stock_available_mrp>=17.0dev,<17.1dev",
    "odoo-addon-stock_free_quantity>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
